@@ -162,6 +162,7 @@ $lang['nametext'] = 'Module Name';
 $lang['need_upgrade'] = 'This module is awaiting upgrade';
 $lang['newerversion'] = 'Newer version installed';
 $lang['newer_available'] = 'New version available';
+$lang['notavailable'] = 'This module cannot be loaded.  Possibly due to dependenceis';
 $lang['notcompatibile'] = 'This module is not compatible with this version of CMSMS';
 $lang['notice'] = 'Notice';
 $lang['notinstalled'] = 'Not installed';
@@ -243,6 +244,7 @@ $lang['title_modulestatus'] = 'This column displays the status or actions availa
 $lang['title_moduleversion'] = 'This column displays the module version';
 $lang['title_new'] = 'This module was released/updated within the last month';
 $lang['title_newmoduleversion'] = 'This column displays the version number of the most recent release of the module';
+$lang['title_notavailable'] = 'This is not ready for use at this time';
 $lang['title_notcompatible'] = 'This module has not passed compatibility tests';
 $lang['title_notinstalled'] = 'This module exists in the modules subdirectory but has not been installed for use';
 $lang['title_remove'] = 'Remove this modules files from the module directory';
